# cpp-stratego-the-maddening-koalas

./: .gitignore
stratego/: Background.h  Board.cpp  Board.h  CMakeLists.txt  Card.cpp  Card.h  EventHandler.cpp  EventHandler.h  Game.cpp  Game.h  GameBoard.cpp  GameBoard.h  GameObject.hpp  HighLight.cpp  HighLight.h  MouseClick.hpp  NeutralPlayer.cpp  NeutralPlayer.h  Player.cpp  Player.h  SideBoard.cpp  SideBoard.h  SpriteCardsResource.cpp  SpriteCardsResource.h  StrategoEnum.h  main.cpp
stratego/Board/: GameBoard.cpp  GameBoard.h  SideBoard.cpp  SideBoard.h
stratego/GameLogic/: EventHandler.cpp  EventHandler.h  MouseClick.hpp
stratego/GameObject/: Card.cpp  Card.h  GameObject.hpp  HighLight.cpp
stratego/Resource/: Background.cpp  Background.h  SpriteCardsResource.cpp  SpriteCardsResource.h  StrategoEnum.h
stratego/engine/: Engine.cpp  Engine.h  Scene.cpp  Scene.h  SdlDeleter.cpp  SdlDeleter.h  SdlDeleter.hpp  Sprite.cpp  Sprite.h
